2008-04-10  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/data/xy/XIntervalSeries.java
    (getXLowValue): New method,
    (getXHighValue): Likewise.

2008-04-08  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/renderer/xy/CandlestickRenderer.java
    (findRangeBounds): New method override,
    * source/org/jfree/data/general/DatasetUtilities.java
    (iterateRangeBounds(XYDataset)): Fixed typo for OHLCDataset.
    
2008-04-08  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/block/BorderArrangement.java
    (arrangeFF): Check for negative width remaining.

2008-04-08  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/block/ColorBlock.java
    (arrange): New method override,
    (draw): Add code for margin, border and padding,
    * source/org/jfree/chart/block/EmptyBlock.java
    (arrange): New method override,
    (draw(Graphics2D, Rectangle2D)): Delegate,
    (draw(Graphics2D, Rectangle2D, Object)): New method override.
    
2008-04-07  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/plot/CategoryPlot.java
    (removeDomainMarker): Check for null collection,
    (removeRangeMarker): Likewise,
    * source/org/jfree/chart/plot/XYPlot.java
    (removeDomainMarker): Check for null collection,
    (removeRangeMarker): Likewise.

2008-04-07  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/data/DefaultKeyedValue.java:
    (DefaultKeyedValue): Don't allow null key,
    (equals): Simplified to reflect that this.key is never null.

2008-04-07  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/renderer/xy/AbstractXYItemRenderer.java:
    Updated various method to use fireChangeEvent(),
    * source/org/jfree/chart/renderer/xy/XYBlockRenderer.java:
    (setBlockWidth): Use fireChangeEvent(),
    (setBlockHeight): Likewise,
    (setBlockAnchor): Likewise,