@@ -2,32 +2,32 @@
  * JFreeChart : a free chart library for the Java(tm) platform
  * ===========================================================
  *
- * (C) Copyright 2000-2007, by Object Refinery Limited and Contributors.
+ * (C) Copyright 2000-2008, by Object Refinery Limited and Contributors.
  *
  * Project Info:  http://www.jfree.org/jfreechart/index.html
  *
- * This library is free software; you can redistribute it and/or modify it 
- * under the terms of the GNU Lesser General Public License as published by 
- * the Free Software Foundation; either version 2.1 of the License, or 
+ * This library is free software; you can redistribute it and/or modify it
+ * under the terms of the GNU Lesser General Public License as published by
+ * the Free Software Foundation; either version 2.1 of the License, or
  * (at your option) any later version.
  *
- * This library is distributed in the hope that it will be useful, but 
- * WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY 
- * or FITNESS FOR A PARTICULAR PURPOSE. See the GNU Lesser General Public 
+ * This library is distributed in the hope that it will be useful, but
+ * WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
+ * or FITNESS FOR A PARTICULAR PURPOSE. See the GNU Lesser General Public
  * License for more details.
  *
  * You should have received a copy of the GNU Lesser General Public
  * License along with this library; if not, write to the Free Software
- * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, 
- * USA.  
+ * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301,
+ * USA.
  *
- * [Java is a trademark or registered trademark of Sun Microsystems, Inc. 
+ * [Java is a trademark or registered trademark of Sun Microsystems, Inc.
  * in the United States and other countries.]
  *
  * ------------------------------
  * XIntervalSeriesCollection.java
  * ------------------------------
- * (C) Copyright 2006, 2007, by Object Refinery Limited.
+ * (C) Copyright 2006-2008, by Object Refinery Limited.
  *
  * Original Author:  David Gilbert (for Object Refinery Limited);
  * Contributor(s):   -;
@@ -37,6 +37,7 @@
  * 20-Oct-2006 : Version 1 (DG);
  * 27-Nov-2006 : Added clone() override (DG);
  * 21-Jun-2007 : Removed JCommon dependencies (DG);
+ * 18-Jan-2008 : Added removeSeries() and removeAllSeries() methods (DG);
  *
  */
 
@@ -60,16 +61,16 @@ public class XIntervalSeriesCollection extends AbstractIntervalXYDataset
 
     /** Storage for the data series. */
     private List data;
-    
-    /** 
-     * Creates a new instance of <code>XIntervalSeriesCollection</code>. 
+
+    /**
+     * Creates a new instance of <code>XIntervalSeriesCollection</code>.
      */
     public XIntervalSeriesCollection() {
         this.data = new java.util.ArrayList();
     }
 
     /**
-     * Adds a series to the collection and sends a {@link DatasetChangeEvent} 
+     * Adds a series to the collection and sends a {@link DatasetChangeEvent}
      * to all registered listeners.
      *
      * @param series  the series (<code>null</code> not permitted).
@@ -98,7 +99,7 @@ public class XIntervalSeriesCollection extends AbstractIntervalXYDataset
      * @param series  the series index (zero-based).
      *
      * @return The series.
-     * 
+     *
      * @throws IllegalArgumentException if <code>series</code> is not in the
      *     range <code>0</code> to <code>getSeriesCount() - 1</code>.
      */
@@ -112,11 +113,11 @@ public class XIntervalSeriesCollection extends AbstractIntervalXYDataset
     /**
      * Returns the key for a series.
      *
-     * @param series  the series index (in the range <code>0</code> to 
+     * @param series  the series index (in the range <code>0</code> to
      *     <code>getSeriesCount() - 1</code>).
      *
      * @return The key for a series.
-     * 
+     *
      * @throws IllegalArgumentException if <code>series</code> is not in the
      *     specified range.
      */
@@ -131,7 +132,7 @@ public class XIntervalSeriesCollection extends AbstractIntervalXYDataset
      * @param series  the series (zero-based index).
      *
      * @return The item count.
-     * 
+     *
      * @throws IllegalArgumentException if <code>series</code> is not in the
      *     range <code>0</code> to <code>getSeriesCount() - 1</code>.
      */
@@ -155,6 +156,48 @@ public class XIntervalSeriesCollection extends AbstractIntervalXYDataset
     }
 
     /**
+     * Returns the start x-value (as a double primitive) for an item within a
+     * series.
+     *
+     * @param series  the series index (zero-based).
+     * @param item  the item index (zero-based).
+     *
+     * @return The value.
+     */
+    public double getStartXValue(int series, int item) {
+        XIntervalSeries s = (XIntervalSeries) this.data.get(series);
+        return s.getXLowValue(item);
+    }
+
+    /**
+     * Returns the end x-value (as a double primitive) for an item within a
+     * series.
+     *
+     * @param series  the series (zero-based index).
+     * @param item  the item (zero-based index).
+     *
+     * @return The value.
+     */
+    public double getEndXValue(int series, int item) {
+        XIntervalSeries s = (XIntervalSeries) this.data.get(series);
+        return s.getXHighValue(item);
+    }
+
+    /**
+     * Returns the y-value (as a double primitive) for an item within a
+     * series.
+     *
+     * @param series  the series index (zero-based).
+     * @param item  the item index (zero-based).
+     *
+     * @return The value.
+     */
+    public double getYValue(int series, int item) {
+        XIntervalSeries s = (XIntervalSeries) this.data.get(series);
+        return s.getYValue(item);
+    }
+
+    /**
      * Returns the y-value for an item within a series.
      *
      * @param series  the series index.
@@ -169,7 +212,7 @@ public class XIntervalSeriesCollection extends AbstractIntervalXYDataset
     }
 
     /**
-     * Returns the start x-value for an item within a series.  
+     * Returns the start x-value for an item within a series.
      *
      * @param series  the series index.
      * @param item  the item index.
@@ -183,7 +226,7 @@ public class XIntervalSeriesCollection extends AbstractIntervalXYDataset
     }
 
     /**
-     * Returns the end x-value for an item within a series.  
+     * Returns the end x-value for an item within a series.
      *
      * @param series  the series index.
      * @param item  the item index.
@@ -221,13 +264,67 @@ public class XIntervalSeriesCollection extends AbstractIntervalXYDataset
     public Number getEndY(int series, int item) {
         return getY(series, item);
     }
-    
+
+    /**
+     * Removes a series from the collection and sends a
+     * {@link DatasetChangeEvent} to all registered listeners.
+     *
+     * @param series  the series index (zero-based).
+     *
+     * @since 1.0.10
+     */
+    public void removeSeries(int series) {
+        if ((series < 0) || (series >= getSeriesCount())) {
+            throw new IllegalArgumentException("Series index out of bounds.");
+        }
+        XIntervalSeries ts = (XIntervalSeries) this.data.get(series);
+        ts.removeChangeListener(this);
+        this.data.remove(series);
+        fireDatasetChanged();
+    }
+
+    /**
+     * Removes a series from the collection and sends a
+     * {@link DatasetChangeEvent} to all registered listeners.
+     *
+     * @param series  the series (<code>null</code> not permitted).
+     *
+     * @since 1.0.10
+     */
+    public void removeSeries(XIntervalSeries series) {
+        if (series == null) {
+            throw new IllegalArgumentException("Null 'series' argument.");
+        }
+        if (this.data.contains(series)) {
+            series.removeChangeListener(this);
+            this.data.remove(series);
+            fireDatasetChanged();
+        }
+    }
+
+    /**
+     * Removes all the series from the collection and sends a
+     * {@link DatasetChangeEvent} to all registered listeners.
+     *
+     * @since 1.0.10
+     */
+    public void removeAllSeries() {
+        // Unregister the collection as a change listener to each series in
+        // the collection.
+        for (int i = 0; i < this.data.size(); i++) {
+          XIntervalSeries series = (XIntervalSeries) this.data.get(i);
+          series.removeChangeListener(this);
+        }
+        this.data.clear();
+        fireDatasetChanged();
+    }
+
     /**
      * Tests this instance for equality with an arbitrary object.
      *
      * @param obj  the object (<code>null</code> permitted).
      *
-     * @return A boolean. 
+     * @return A boolean.
      */
     public boolean equals(Object obj) {
         if (obj == this) {
@@ -239,19 +336,19 @@ public class XIntervalSeriesCollection extends AbstractIntervalXYDataset
         XIntervalSeriesCollection that = (XIntervalSeriesCollection) obj;
         return ObjectUtilities.equal(this.data, that.data);
     }
-    
+
     /**
      * Returns a clone of this instance.
-     * 
+     *
      * @return A clone.
-     * 
+     *
      * @throws CloneNotSupportedException if there is a problem.
      */
     public Object clone() throws CloneNotSupportedException {
-        XIntervalSeriesCollection clone 
+        XIntervalSeriesCollection clone
                 = (XIntervalSeriesCollection) super.clone();
         clone.data = (List) ObjectUtilities.deepClone(this.data);
         return clone;
     }
-  
+
 }
