@@ -1,3 +1,13 @@
+2008-04-10  David Gilbert  <david.gilbert@object-refinery.com> 
+
+    * source/org/jfree/data/xy/XIntervalSeriesCollection.java
+    (getStartXValue): New method override,
+    (getEndXValue): Likewise,
+    (getYValue): Likewise,
+    (removeSeries(int)): New method,
+    (removeSeries(XIntervalSeries)): Likewise,
+    (removeAllSeries): Likewise.
+
 2008-04-10  David Gilbert  <david.gilbert@object-refinery.com>
 
     * source/org/jfree/data/xy/XIntervalSeries.java
